[gd_scene load_steps=4 format=3 uid="uid://csaidm4ve14hg"]

[ext_resource type="Theme" uid="uid://c50tb4imdqxkj" path="res://assets/options.tres" id="1_5ahym"]
[ext_resource type="Theme" uid="uid://bwxsv6uwdv14g" path="res://assets/menu.tres" id="2_14u8d"]
[ext_resource type="Script" path="res://src/options_menu.gd" id="2_545ej"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5ahym")
script = ExtResource("2_545ej")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.0
offset_top = -364.0
offset_right = 536.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VideoLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "VIDEO"

[node name="FullscreenCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FULLSCREEN"

[node name="ScreenShakeCheck" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SCREEN SHAKING"

[node name="MASeparator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "AUDIO"

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MASTER VOLUME"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SfxVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX VOLUME"

[node name="SfxVolumeContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AKSeparator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="KeybindingsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "KEYBINDING"

[node name="KeybindingContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KeybindingButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/KeybindingContainer"]
layout_mode = 2
theme = ExtResource("2_14u8d")
theme_override_font_sizes/font_size = 36
text = "CONFIGURE KEYBINDS"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/KeybindingContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScreenShakeCheck" to="." method="_on_screen_shake_check_toggled"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/SfxVolumeContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/KeybindingContainer/KeybindingButton" to="." method="_on_keybinding_button_pressed"]
